--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "parcel watch assets/index.js --out-dir prod/"
+    "watch": "parcel watch assets/index.js scss/app.scss --out-dir prod/"
   },
   "author": "",
   "license": "ISC",
